# yen-gov

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend/tests/: _emit_fixtures.py  test_admin_indicators.py  test_admin_inventory.py  test_admin_pipeline.py  test_admin_schemas.py  test_boundary_snapshot_geojsonl_7z.py  test_boundary_snapshot_split_by.py  test_boundary_snapshot_state_filter.py  test_boundary_snapshot_unkeyed_metadata.py  test_canonical_eci_backfill.py  test_canonical_eci_dim_rows.py  test_canonical_eci_identity.py  test_canonical_eci_observations.py  test_canonical_eci_party_lookup.py  test_canonical_eci_rollups.py  test_canonical_parity_oracle.py  test_canonical_writer.py  test_canonical_writer_partition.py  test_cm_terms_seed.py  test_core_events.py  test_core_http.py  test_core_io.py  test_core_logging.py  test_core_models.py  test_coverage.py  test_coverage_idempotent.py  test_coverage_indicator_pages.py  test_datasets_integrity.py  test_derive_temporal_range.py  test_election_events_seed.py  test_emit_completeness_determinism.py  test_emit_csv_bundle.py  test_emit_sqlite.py  test_energy_capacity_composer.py  test_entities_seed.py  test_facet_axes_seed.py  test_iced_parity.py  test_inventory_derive.py  test_lgd_backfill.py  test_migrate_indicators_v15_to_v20.py  (+38 more)
backend/tests/fixtures/: canonical_winners_2026_05_19.json
backend/yen_gov/: AGENTS.md  __init__.py  __main__.py  cli.py  coverage.py  coverage_indicator_pages.py  validate.py
backend/yen_gov/admin/: __init__.py  app.py  eci_recon.py  indicators.py  inventory.py  (+2 more)
(+12566 files in other folders)
