[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yen-gov"
version = "0.1.0"
description = "Indian election data — schema-first ingestion, processing, and static visualization."
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.20",
  "typer>=0.12",
  "httpx>=0.27",
  "tenacity>=8.2",
  "pydantic>=2.0",
  "lxml>=5.0",
  "openpyxl>=3.1",
  "duckdb>=1.1",
  # Required by yen_gov.sources.iced_common.crypto for ICED API decryption.
  "pycryptodome>=3.20",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
admin = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]

[project.scripts]
yen-gov = "yen_gov.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["yen_gov*"]
